# pyth-observer

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  observer.py  pyproject.toml  requirements.txt  sample.coingecko.yaml  sample.config.yaml  sample.publishers.yaml  sample.telegram.yaml  testfile
.github/actions/python-poetry/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: build-and-push-image.yaml  build.yml  ci.yaml  ci.yml  docker-image.yml
pyth_observer/: __init__.py  alert_utils.py  calendar.py  check.py  cli.py  coingecko.py  coingecko_mapping.json  crosschain.py  crosschain_mapping.json  dispatch.py  dns.py  event.py  events.py  health_server.py  main.py  metrics.py  models.py  notification.py  price_account_observer.py  prices.py  publisher_price_observer.py  zenduty.py
pyth_observer/check/: __init__.py  price_feed.py  publisher.py  stall_detection.py
pyth_observer/checks/: __init__.py  price_feed.py  publisher.py
pyth_observer/notifiers/: datadog.py  logger.py  notification.py  slack.py
scripts/: build_coingecko_mapping.py
tests/: test_checks_price_feed.py  test_checks_publisher.py  test_price_deviation.py  test_price_deviation_coingecko.py  test_price_deviation_crosschain.py  test_price_offline.py  test_publisher_price_offline.py  test_twap.py
