[tool.isort]
profile = "black"

[tool.poetry]
authors = []
description = ""
name = "pyth-observer"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.8.1"
dnspython = "^2.2.0"
loguru = "^0.6.0"
prometheus-client = "0.12.0"
pythclient = "^0.0.2"
python = "3.8.*"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^6.2.5"
pytest-mock = "^3.7.0"
typing-extensions = "^3.10.0.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
