[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.poe.tasks]
test = "pytest"

[tool.poetry]
name = "pyth-observer"
version = "0.1.0"
description = "Alerts and stuff"
authors = []
readme = "README.md"
packages = [{ include = "pyth_observer" }]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "<4.0.0a1"
dnspython = "^2.2.1"
loguru = "^0.6.0"
pytz = "^2022.4"
pycoingecko = "2.2.0"
throttler = "1.2.1"
datadog-api-client = "2.3.0"
click = "^8.1.3"
pyyaml = "^6.0"
types-pyyaml = "^6.0.12"
types-pytz = "^2022.4.0.0"
more-itertools = "^9.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pythclient = "0.1.2"
prometheus-client = "0.14.1"
typing-extensions = "3.10.0.2"
pytest-mock = "^3.10.0"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
poethepoet = "^0.16.4"
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.982"
ipdb = "^0.13.9"

[tool.poetry.scripts]
pyth-observer = "pyth_observer.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
