[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.poetry]
name = "pyth-observer"
version = "0.1.10"
description = "Alerts and stuff"
authors = []
readme = "README.md"
packages = [{ include = "pyth_observer" }]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "<4.0.0a1"
arrow = "^1.2.3"
base58 = "^2.1.1"
click = "^8.1.3"
datadog-api-client = { extras = ["async"], version = "^2.5.0" }
loguru = "^0.6.0"
more-itertools = "^9.0.0"
prometheus-client = "0.15.0"
pytz = "^2022.4"
pycoingecko = "2.2.0"
pythclient = "0.1.4"
pyyaml = "^6.0"
throttler = "1.2.1"
types-pyyaml = "^6.0.12"
types-pytz = "^2022.4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipdb = "^0.13.9"
isort = "^5.10.1"
pyflakes = "^2.5.0"
pyright = "^1.1.278"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[tool.poetry.scripts]
pyth-observer = "pyth_observer.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
